# HWTool

./: .gitignore
AudioIO/: AudioIO.vcxproj  AudioIO.vcxproj.filters  ReadMe.txt
AudioIO/Debug/AudioIO.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  lib.command.1.tlog
AudioIO/Include/: pcmio.h
AudioIO/Src/: pcmio.c
Common/: Common.vcxproj  Common.vcxproj.filters
Common/Debug/Common.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  lib.command.1.tlog
Common/Include/: common.h  common_fun.h
Common/Src/: common.c
HWTest/: CMakeLists.txt  HWTest.vcxproj  HWTest.vcxproj.filters  ReadMe.txt
HWTest/Debug/HWTest.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  HWTest.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
HWTest/Include/: hwtest.h
HWTest/Src/: hwtest.c
IIR_FILTER/: IIR_FILTER.vcxproj  IIR_FILTER.vcxproj.filters  ReadMe.txt
IIR_FILTER/Debug/IIR_FILTER.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  IIR_FILTER.lastbuildstate  (+3 more)
IIR_FILTER/Include/: iir.h
IIR_FILTER/Src/: iir.c  iir_coef.c
Solution/HWTool/: HWTool_VS2015.VC.db  HWTool_VS2015.sln
Test/: CMakeLists.txt  Test.vcxproj  Test.vcxproj.filters
Test/Debug/Test.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Test/Include/: test.h
Test/Src/: test.c
XCORR/: ReadMe.txt  XCORR.vcxproj  XCORR.vcxproj.filters
XCORR/Include/: xcorr.h
XCORR/Src/: xcorr.c
(+8 files in other folders)
